--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             discussing-together-conference-room-260nw-532073215.jpg" alt="business">
         </section>
         <section id = 'pictop'>
-        <div id = "top" class = "one"></div>
-        <div id = 'top' class = 'two'></div>
-        <div id = 'top' class = 'three'></div>
-        <div id = 'top' class = 'four'></div>
-        <div id = 'top' class = 'five'></div>
-        <div id = 'top' class = 'six'></div>
-        <div id = 'top' class = 'seven'></div>
+        <div id = "top" class = "one">BRB</div>
+        <div id = 'top' class = 'two'>BRB</div>
+        <div id = 'top' class = 'three'>BRB</div>
+        <div id = 'top' class = 'four'>BRB</div>
+        <div id = 'top' class = 'five'>BRB</div>
+        <div id = 'top' class = 'six'>BRB</div>
+        <div id = 'top' class = 'seven'>BRB</div>
         </section>
         <section>
             <h1>BRB's</h1>
