--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href= "C:\Projects\Store Page\index.html">Store</a>
         </nav>
     </header>
-    <main>
+    <main id ="main">
         <section>
             <h1>BRB's</h1>
         </section>
@@ -25,13 +25,13 @@
             discussing-together-conference-room-260nw-532073215.jpg" alt="business">
         </section>
         <section id = 'pictop'>
-        <div id = "top" class = "one"></div>
-        <div id = 'top' class = 'two'></div>
-        <div id = 'top' class = 'three'></div>
-        <div id = 'top' class = 'four'></div>
-        <div id = 'top' class = 'five'></div>
-        <div id = 'top' class = 'six'></div>
-        <div id = 'top' class = 'seven'></div>
+        <div id = "top" class = "one">BRB</div>
+        <div id = 'top' class = 'two'>BRB</div>
+        <div id = 'top' class = 'three'>BRB</div>
+        <div id = 'top' class = 'four'>BRB</div>
+        <div id = 'top' class = 'five'>BRB</div>
+        <div id = 'top' class = 'six'>BRB</div>
+        <div id = 'top' class = 'seven'>BRB</div>
         </section>
         <section>
             <h1>BRB's</h1>
@@ -45,9 +45,9 @@
         <div id = 'bottom' class = 'third'>
             <p>Thank you for checking out the site and enjoy all we have to offer</p>
         </div>
-        <div>
-            <p>A honey bee is a eusocial flying insect within the genus Apis of the bee 
-                clade, all native to Eurasia but spread to four other continents by human beings.</p>
+        <div id ="article">
+            <article></article>A honey bee is a eusocial flying insect within the genus Apis of the bee 
+                clade, all native to Eurasia but spread to four other continents by human beings.</article>
         </div>
     </main>
     <footer>
