--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <div id = 'top' class = 'seven'>BRB</div>
         </section>
         <section>
-            <h1>BRB's</h1>
+            <h1>CRB's</h1>
         </section>
         <div id='bottom' class = 'first'>
-            <p>This is BRB's bees. Your home for world class honey bee information</p>
+            <p>This is CRB's bees. Your home for world class honey bee information</p>
         </div>
         <div id = 'bottom' class = 'second'>
             <p>We are located in lovely Centuria Wisconsin and have the best facilities in the area</p>
