--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
             <h1>BRB's</h1>
         </section>
         <section >
-            <img src="https://image.shutterstock.com/image-photo/businesspeople-
-            discussing-together-conference-room-260nw-532073215.jpg" alt="business">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRhuVwN4K552ZQqxfcioFkcBN-WLLtRm60igge63g-iNQpmikB0">
         </section>
         <section id = 'pictop'>
         <div id = "top" class = "one">BRB</div>
