--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Thank you for checking out the site and enjoy all we have to offer</p>
         </div>
         <div id ="article">
-            <article></article>A honey bee is a eusocial flying insect within the genus Apis of the bee 
+            <article></article>A honey bee is an eusocial flying insect within the genus Apis of the bee 
                 clade, all native to Eurasia but spread to four other continents by human beings.</article>
         </div>
     </main>
