--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
         <div id = 'bottom' class = 'third'>
             <p>Thank you for checking out the site and enjoy all we have to offer</p>
         </div>
-        <div>
-            <article id = "article">A honey bee is an eusocial flying insect within the genus Apis of the bee 
-                clade, all native to Eurasia but spread to four other continents by human beings.</article>
-        </div>
-        <section class = "container"></section>
+       
+        <section class = "container">
+            <div>
+                <article id = "article">A honey bee is an eusocial flying insect within the genus Apis of the bee 
+                    clade, all native to Eurasia but spread to four other continents by human beings.</article>
+            </div>
+        </section>
     </main>
     <footer>
         <div id="email">
