shervheims bee colony

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         
         <section class = 'title' id = 'ttitle'>
             <h1>BRBees</h1>
+            <p>Shervheim's bee colony</p>
         </section>
 
         <section id = 'pictop'>
