Adding sting js

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div id = 'bottom' class = 'third'>
             <p>Thank you for checking out the site and enjoy all we have to offer</p>
         </div>
-        <div id = 'bottom' class = 'fourth'>Sting me button!! Click and get stung!</div>
+        <fourth id = 'bottom' class = 'fourth'><p>Sting me button!! Click and get stung!</p></fourth>
        
         <section class = "container">
             <div>
@@ -69,5 +69,6 @@
         <div id="sponsor">Sites Inc.</div>
 
     </footer>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
